Базовый экспорт изображений

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -18,7 +18,7 @@
       <div class="header__inner">
         <!-- Логотип -->
         <a class="logo">
-          <img class="logo__image" src="images/nerds-logo.svg" width="160" height="65" alt="nerds-logo">
+          <img class="logo__image" src="images/svg/nerds-logo.svg" width="160" height="65" alt="nerds-logo">
         </a>
         <!-- Навигация -->
         <nav class="navigation">
@@ -114,7 +114,7 @@
                 <li class="product__item">
                   <img class="product__image" src="" alt="">
                   <div class="product__info">
-                    <b class="product__title">MISHKA</b>
+                    <b class="product__title">Mishka</b>
                     <p class="product__text">Интернет-магазин вязаных игрушек</p>
                     <button class="product__price button">9 900 руб.</button>
                   </div>
@@ -130,7 +130,7 @@
                 <li class="product__item">
                   <img class="product__image" src="" alt="">
                   <div class="product__info">
-                    <b class="product__title">КВАСТ</b>
+                    <b class="product__title">Кваст</b>
                     <p class="product__text">Промо-сайт производителя крафтового кваса</p>
                     <button class="product__price button">9 900 руб.</button>
                   </div>
@@ -150,7 +150,7 @@
                       <a class="paginator__link button" href="#">3</a>
                     </li>
                   </ul>
-                  <a class="paginator__button button" href="#">следующая</a>
+                  <a class="paginator__button button" href="#">Следующая</a>
                 </div>
               </div>
             </div>
