--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
       <div class="header__inner">
         <!-- Логотип -->
         <a class="logo">
-          <img class="logo__image" src="images/nerds-logo.svg" width="160" height="65" alt="nerds-logo">
+          <img class="logo__image" src="images/svg/nerds-logo.svg" width="160" height="65" alt="nerds-logo">
         </a>
         <!-- Навигация -->
         <nav class="navigation">
@@ -65,7 +65,7 @@
                 <p class="advantages__description">
                   Математически выверенный дизайн для вашего сайта или мобильного приложения.
                 </p>
-                <a class="advantages__link button" href="#">УЗНАТЬ БОЛЬШЕ</a>
+                <a class="advantages__link button" href="#">Узнать больше</a>
               </div>
             </li>
             <li class="advantages__item slider__item">
@@ -76,7 +76,7 @@
                 <p class="advantages__description">
                   Никакого креатива, только математические формулы для расчета идеальных пропорций.
                 </p>
-                <a class="advantages__link button" href="#">УЗНАТЬ БОЛЬШЕ</a>
+                <a class="advantages__link button" href="#">Узнать больше</a>
               </div>
             </li>
             <li class="advantages__item slider__item">
@@ -89,7 +89,7 @@
                   Работать днем, как все? Мы против этого.
                   Ближе к полуночи работа только начинается.
                 </p>
-                <a class="advantages__link button" href="#">УЗНАТЬ БОЛЬШЕ</a>
+                <a class="advantages__link button" href="#">Узнать больше</a>
               </div>
             </li>
           </ul>
@@ -110,21 +110,21 @@
               <p class="services__description">
                 Мир никогда не будет прежним после того как увидит ваш сайт!
               </p>
-              <a class="services__link button" href="#">ЗАКАЗАТЬ</a>
+              <a class="services__link button" href="#">Заказать</a>
             </li>
             <li class="services__item">
               <h4 class="services__title">Приложения</h4>
               <p class="services__description">
                 Покорите топ-10 приложений в AppStore и Google Play
               </p>
-              <a class="services__link button" href="#">ЗАКАЗАТЬ</a>
+              <a class="services__link button" href="#">Заказать</a>
             </li>
             <li class="services__item">
               <h4 class="services__title">Презентации</h4>
               <p class="services__description">
                 Вы даже не подозреваете, насколько вы изумительны!
               </p>
-              <a class="services__link button" href="#">ЗАКАЗАТЬ</a>
+              <a class="services__link button" href="#">Заказать</a>
             </li>
           </ul>
         </div>
