Импорт контентных изображений завершен

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -88,7 +88,7 @@
               <!-- Список товаров -->
               <ul class="product__list">
                 <li class="product__item">
-                  <img class="product__image" src="" alt="">
+                  <img class="product__image" src="images/jpeg/img-sedona.jpg" alt="">
                   <div class="product__info">
                     <b class="product__title">Sedona</b>
                     <p class="product__text">Информационный сайт для туристов</p>
@@ -96,7 +96,7 @@
                   </div>
                 </li>
                 <li class="product__item">
-                  <img class="product__image" src="" alt="">
+                  <img class="product__image" src="images/jpeg/img-pink.jpg" alt="">
                   <div class="product__info">
                     <b class="product__title">Pink App</b>
                     <p class="product__text">Продуктовый лендинг приложения для iOS и Android</p>
@@ -104,7 +104,7 @@
                   </div>
                 </li>
                 <li class="product__item">
-                  <img class="product__image" src="" alt="">
+                  <img class="product__image" src="images/jpeg/img-barbershop.jpg" alt="">
                   <div class="product__info">
                     <b class="product__title">Barbershop</b>
                     <p class="product__text">Сайт салона красоты. Для мужчин, да.</p>
@@ -112,7 +112,7 @@
                   </div>
                 </li>
                 <li class="product__item">
-                  <img class="product__image" src="" alt="">
+                  <img class="product__image" src="images/jpeg/img-mishka.jpg" alt="">
                   <div class="product__info">
                     <b class="product__title">Mishka</b>
                     <p class="product__text">Интернет-магазин вязаных игрушек</p>
@@ -120,7 +120,7 @@
                   </div>
                 </li>
                 <li class="product__item">
-                  <img class="product__image" src="" alt="">
+                  <img class="product__image" src="images/jpeg/img-aplus.jpg" alt="">
                   <div class="product__info">
                     <b class="product__title">A Plus</b>
                     <p class="product__text">Лендинг курсов повышения квалификации</p>
@@ -128,7 +128,7 @@
                   </div>
                 </li>
                 <li class="product__item">
-                  <img class="product__image" src="" alt="">
+                  <img class="product__image" src="images/jpeg/img-kvast.jpg" alt="">
                   <div class="product__info">
                     <b class="product__title">Кваст</b>
                     <p class="product__text">Промо-сайт производителя крафтового кваса</p>
