--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,7 @@
           <ul class="advantages__list slider__list">
             <li class="advantages__item slider__item">
               <div class="advantages__content">
+                <img class="advantages__image" src="images/png/index-slide-1.png" alt="">
                 <h3 class="advantages__title">
                   Долго, дорого, скрупулезно.
                 </h3>
@@ -70,6 +71,7 @@
             </li>
             <li class="advantages__item slider__item">
               <div class="advantages__content">
+                <img class="advantages__image" src="images/png/index-slide-2.png" alt="">
                 <h3 class="advantages__title">
                   Любим математику как никто другой
                 </h3>
@@ -81,6 +83,7 @@
             </li>
             <li class="advantages__item slider__item">
               <div class="advantages__content">
+                <img class="advantages__image" src="images/png/index-slide-3.png" alt="">
                 <h3 class="advantages__title">
                   Только ночь,
                   только хардкор
@@ -106,6 +109,7 @@
         <div class="services__inner">
           <ul class="services__list">
             <li class="services__item">
+              <img class="services__image" src="images/jpeg/illustration-1.jpg" alt="">
               <h4 class="services__title">Веб-сайты</h4>
               <p class="services__description">
                 Мир никогда не будет прежним после того как увидит ваш сайт!
@@ -113,6 +117,7 @@
               <a class="services__link button" href="#">Заказать</a>
             </li>
             <li class="services__item">
+              <img class="services__image" src="images/jpeg/illustration-2.jpg" alt="">
               <h4 class="services__title">Приложения</h4>
               <p class="services__description">
                 Покорите топ-10 приложений в AppStore и Google Play
@@ -120,6 +125,7 @@
               <a class="services__link button" href="#">Заказать</a>
             </li>
             <li class="services__item">
+              <img class="services__image" src="images/jpeg/illustration-3.jpg" alt="">
               <h4 class="services__title">Презентации</h4>
               <p class="services__description">
                 Вы даже не подозреваете, насколько вы изумительны!
@@ -135,13 +141,40 @@
           <div class="studio__content">
             <!-- О нас -->
             <div class="studio__about-us">
-              <h3 class="studio__title"></h3>
-              <p class="studio__description"></p>
-              <ul class="studio__services-list">
-                <li class="studio__services-item"></li>
-                <li class="studio__services-item"></li>
-                <li class="studio__services-item"></li>
-              </ul>
+              <h3 class="studio__title">
+                Мы — маленькая, но гордая
+                дизайн-студия из Краснодара.
+              </h3>
+              <p class="studio__description">
+                Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+                превыше креатива. Работаем не покладая рук, как роботы.
+              </p>
+              <!-- Описание услуг -->
+              <div class="studio__services">
+                <h4 class="studio__services-title">Выполняем заказы на разработку:</h4>
+                <b class="studio__services-text">Веб-сайтов любой сложности</b>
+                <b class="studio__services-text">Мобильных приложений для iOS и Android</b>
+                <b class="studio__services-text">Слайдшоу и видео для корпоративных презентаций</b>
+              </div>
+            </div>
+            <!-- Статистика студии -->
+            <div class="studio__stats">
+              <img class="studio__stats-image" src="images/jpeg/nerds-illustration.jpg" alt="">
+              <table class="studio__stats-table">
+                <caption class="studio__stats-title">с 2004 года Любим точность во всем:</caption>
+                <tr class="studio__stats-column">
+                  <th class="studio__stats-percent">146<sup>%</sup></th>
+                  <th class="studio__stats-text">Уровень самоотдачи</th>
+                </tr>
+                <tr class="studio__stats-column">
+                  <th class="studio__stats-percent">100<sup>%</sup></th>
+                  <th class="studio__stats-text">Соблюдение сроков</th>
+                </tr>
+                <tr class="studio__stats-column">
+                  <th class="studio__stats-percent">50<sup>%</sup></th>
+                  <th class="studio__stats-text">Минимальная предоплата</th>
+                </tr>
+              </table>
             </div>
             <!-- Наша статистика -->
             <div class="studio__stats"></div>
@@ -149,16 +182,16 @@
           <!-- Студии -->
           <div class="studios">
             <a class="studios__link" href="#">
-              <img class="studios__image" src="" alt="">
+              <img class="studios__image" src="images/png/html-academy-logo.png" alt="">
             </a>
             <a class="studios__link" href="#">
-              <img class="studios__image" src="" alt="">
+              <img class="studios__image" src="images/png/borodinski-logo.png" alt="">
             </a>
             <a class="studios__link" href="#">
-              <img class="studios__image" src="" alt="">
+              <img class="studios__image" src="images/png/pink-logo.png" alt="">
             </a>
             <a class="studios__link" href="#">
-              <img class="studios__image" src="" alt="">
+              <img class="studios__image" src="images/png/mishka-logo.png" alt="">
             </a>
           </div>
         </div>
