--- a/app/catalog.html
+++ b/app/catalog.html
@@ -37,13 +37,9 @@
             </li>
           </ul>
         </nav>
-        <!-- Личный кабинет -->
-        <div class="login">
-          <ul class="login__list">
-            <li class="login__item">
-              <a class="login__link" href="">Корзина</a>
-            </li>
-          </ul>
+        <!-- Корзина -->
+        <div class="cart">
+          <a class="cart__link" href="#">Корзина</a>
         </div>
       </div>
       <!-- Заголовок страниц -->
@@ -59,7 +55,74 @@
         <div class="catalog__inner">
           <!-- Фильтр товаров -->
           <div class="filter__wrapper">
-            <form class="filter" action=""></form>
+            <form class="filter" action="https://echo.htmlacademy.ru" method="post">
+              <fieldset class="filter__field">
+                <legend class="filter__title">Стоимость:</legend>
+                <!-- Счетчик цены -->
+                <div class="value-range__wrapper">
+                  <div class="value-range">
+                    <div class="value-range__field">
+                      <input class="value-range__slider" type="range" value="70">
+                    </div>
+                    <div class="value-range__field">
+                      <p class="value-range__row">
+                        <label class="value-range__label" for="from-value">От</label>
+                        <input class="value-range__input value-range__from-value" name="from-value" type="number"
+                          id="from-value" value="0">
+                      </p>
+                      <p class="value-range__row">
+                        <label class="value-range__label" for="to-value">До</label>
+                        <input class="value-range__input value-range__to-value" name="to-value" type="number"
+                          id="to-value" value="15000">
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </fieldset>
+              <fieldset class="filter__field">
+                <legend class="filter__title">Сетка:</legend>
+                <ul class="filter__list">
+                  <li class="filter__item">
+                    <label class="filter__label" for="grid-1">Адаптивная</label>
+                    <input class="filter__input" name="grid" type="radio" id="grid-1" value="adaptive" checked>
+                  </li>
+                  <li class="filter__item">
+                    <label class="filter__label" for="grid-2">Фиксированная</label>
+                    <input class="filter__input" name="grid" type="radio" id="grid-2" value="fixed">
+                  </li>
+                  <li class="filter__item">
+                    <label class="filter__label" for="grid-3">Резиновая</label>
+                    <input class="filter__input" name="grid" type="radio" id="grid-3" value="rubber">
+                  </li>
+                </ul>
+              </fieldset>
+              <fieldset class="filter__field">
+                <legend class="filter__title">Особенности:</legend>
+                <ul class="filter__list">
+                  <li class="filter__item">
+                    <label class="filter__label" for="features-1">Слайдер</label>
+                    <input class="filter__input" name="slider" type="checkbox" id="features-1" checked>
+                  </li>
+                  <li class="filter__item">
+                    <label class="filter__label" for="features-2">Блок преимуществ</label>
+                    <input class="filter__input" name="benefits-block" type="checkbox" id="features-2">
+                  </li>
+                  <li class="filter__item">
+                    <label class="filter__label" for="features-3">Новости</label>
+                    <input class="filter__input" name="news" type="checkbox" id="features-3" checked>
+                  </li>
+                  <li class="filter__item">
+                    <label class="filter__label" for="features-4">Галерея</label>
+                    <input class="filter__input" name="gallery" type="checkbox" id="features-4">
+                  </li>
+                  <li class="filter__item">
+                    <label class="filter__label" for="features-5">Корзина</label>
+                    <input class="filter__input" name="cart" type="checkbox" id="features-5">
+                  </li>
+                </ul>
+              </fieldset>
+              <button class="filter__button" type="submit">Показать</button>
+            </form>
           </div>
           <!-- Товары -->
           <div class="product__wrapper">
@@ -70,13 +133,13 @@
                   <h4 class="sorting__title">Сортировка:</h4>
                   <ul class="sorting__list">
                     <li class="sorting__item">
-                      <button class="sorting__button sorting__button--active" type="button">По цене</button>
+                      <a class="sorting__button sorting__button--active" type="button">По цене</a>
                     </li>
                     <li class="sorting__item">
-                      <button class="sorting__button" type="button">По типу</button>
+                      <a class="sorting__button" type="button">По типу</a>
                     </li>
                     <li class="sorting__item">
-                      <button class="sorting__button" type="button">По названию</button>
+                      <a class="sorting__button" type="button">По названию</a>
                     </li>
                   </ul>
                   <div class="sorting__arrows">
@@ -202,6 +265,33 @@
       </div>
     </div>
   </footer>
+  <!-- Всплывающее окно обратной связи -->
+  <div class="popup__wrapper">
+    <section class="popup">
+      <h2 class="popup__title">Напишите нам</h2>
+      <!-- Форма обратной связи -->
+      <form class="feedback" action="https://echo.htmlacademy.ru" method="post">
+        <div class="feedback__field">
+          <p class="feedback__row">
+            <label class="feedback__label" for="feedback__name">Ваше имя:</label>
+            <input class="feedback__input" name="name" type="text" id="feedback__name" placeholder="Имя Фамилия">
+          </p>
+          <p class="feedback__row">
+            <label class="feedback__label" for="feedback__email">Ваш e-mail:</label>
+            <input class="feedback__input" name="email" type="email" id="feedback__email"
+              placeholder="email@example.com">
+          </p>
+        </div>
+        <div class="feedback__field">
+          <p class="feedback__row">
+            <label class="feedback__label" for="feedback__text">Текст письма:</label>
+            <textarea class="feedback__text" name="text" id="feedback__text" placeholder="В свободной форме"></textarea>
+          </p>
+        </div>
+        <button class="feedback__button" type="submit">Отправить</button>
+      </form>
+    </section>
+  </div>
 
   <!-- Скрипты -->
   <script src="js/main.min.js"></script>
