--- a/app/catalog.html
+++ b/app/catalog.html
@@ -18,22 +18,22 @@
       <div class="header__inner">
         <!-- Логотип -->
         <a class="logo">
-          <img class="logo__image" src="images/svg/nerds-logo.svg" width="160" height="65" alt="nerds-logo">
+          <img class="logo__image" src="images/svg/nerds-logo.svg" width="160" height="65" alt="Nerds logo">
         </a>
         <!-- Навигация -->
         <nav class="navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a class="navigation__link" href="">Студия</a>
+              <a class="navigation__link" href="#">Студия</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="">Клиенты</a>
+              <a class="navigation__link" href="#">Клиенты</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="">Магазин</a>
+              <a class="navigation__link" href="#">Магазин</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="">Контакты</a>
+              <a class="navigation__link" href="#">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -151,7 +151,7 @@
               <!-- Список товаров -->
               <ul class="product__list">
                 <li class="product__item">
-                  <img class="product__image" src="images/jpeg/img-sedona.jpg" alt="">
+                  <img class="product__image" src="images/jpeg/img-sedona.jpg" width="360" height="576" alt="Sedona">
                   <div class="product__info">
                     <b class="product__title">Sedona</b>
                     <p class="product__text">Информационный сайт для туристов</p>
@@ -159,7 +159,7 @@
                   </div>
                 </li>
                 <li class="product__item">
-                  <img class="product__image" src="images/jpeg/img-pink.jpg" alt="">
+                  <img class="product__image" src="images/jpeg/img-pink.jpg" width="360" height="576" alt="Pink">
                   <div class="product__info">
                     <b class="product__title">Pink App</b>
                     <p class="product__text">Продуктовый лендинг приложения для iOS и Android</p>
@@ -167,7 +167,7 @@
                   </div>
                 </li>
                 <li class="product__item">
-                  <img class="product__image" src="images/jpeg/img-barbershop.jpg" alt="">
+                  <img class="product__image" src="images/jpeg/img-barbershop.jpg" width="360" height="576" alt="Barbershop">
                   <div class="product__info">
                     <b class="product__title">Barbershop</b>
                     <p class="product__text">Сайт салона красоты. Для мужчин, да.</p>
@@ -175,7 +175,7 @@
                   </div>
                 </li>
                 <li class="product__item">
-                  <img class="product__image" src="images/jpeg/img-mishka.jpg" alt="">
+                  <img class="product__image" src="images/jpeg/img-mishka.jpg" width="360" height="576" alt="Mishka">
                   <div class="product__info">
                     <b class="product__title">Mishka</b>
                     <p class="product__text">Интернет-магазин вязаных игрушек</p>
@@ -183,7 +183,7 @@
                   </div>
                 </li>
                 <li class="product__item">
-                  <img class="product__image" src="images/jpeg/img-aplus.jpg" alt="">
+                  <img class="product__image" src="images/jpeg/img-aplus.jpg" width="360" height="576" alt="Aplus">
                   <div class="product__info">
                     <b class="product__title">A Plus</b>
                     <p class="product__text">Лендинг курсов повышения квалификации</p>
@@ -191,7 +191,7 @@
                   </div>
                 </li>
                 <li class="product__item">
-                  <img class="product__image" src="images/jpeg/img-kvast.jpg" alt="">
+                  <img class="product__image" src="images/jpeg/img-kvast.jpg" width="360" height="576" alt="Kvast">
                   <div class="product__info">
                     <b class="product__title">Кваст</b>
                     <p class="product__text">Промо-сайт производителя крафтового кваса</p>
