--- a/app/index.html
+++ b/app/index.html
@@ -18,22 +18,22 @@
       <div class="header__inner">
         <!-- Логотип -->
         <a class="logo">
-          <img class="logo__image" src="images/svg/nerds-logo.svg" width="160" height="65" alt="nerds-logo">
+          <img class="logo__image" src="images/svg/nerds-logo.svg" width="160" height="65" alt="Nerds logo">
         </a>
         <!-- Навигация -->
         <nav class="navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a class="navigation__link" href="">Студия</a>
+              <a class="navigation__link" href="#">Студия</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="">Клиенты</a>
+              <a class="navigation__link" href="#">Клиенты</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="">Магазин</a>
+              <a class="navigation__link" href="#">Магазин</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="">Контакты</a>
+              <a class="navigation__link" href="#">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -55,7 +55,7 @@
           <ul class="advantages__list slider__list">
             <li class="advantages__item slider__item">
               <div class="advantages__content">
-                <img class="advantages__image" src="images/png/index-slide-1.png" alt="">
+                <img class="advantages__image" src="images/png/index-slide-1.png" width="760" height="431" alt="Смартфоны">
                 <h3 class="advantages__title">
                   Долго, дорого, скрупулезно.
                 </h3>
@@ -67,7 +67,7 @@
             </li>
             <li class="advantages__item slider__item">
               <div class="advantages__content">
-                <img class="advantages__image" src="images/png/index-slide-2.png" alt="">
+                <img class="advantages__image" src="images/png/index-slide-2.png" width="760" height="431" alt="Десктопы">
                 <h3 class="advantages__title">
                   Любим математику как никто другой
                 </h3>
@@ -79,7 +79,7 @@
             </li>
             <li class="advantages__item slider__item">
               <div class="advantages__content">
-                <img class="advantages__image" src="images/png/index-slide-3.png" alt="">
+                <img class="advantages__image" src="images/png/index-slide-3.png" width="760" height="431" alt="Планшеты">
                 <h3 class="advantages__title">
                   Только ночь,
                   только хардкор
@@ -105,7 +105,7 @@
         <div class="services__inner">
           <ul class="services__list">
             <li class="services__item">
-              <img class="services__image" src="images/jpeg/illustration-1.jpg" alt="">
+              <img class="services__image" src="images/jpeg/illustration-1.jpg" width="300" height="146>
               <h4 class="services__title">Веб-сайты</h4>
               <p class="services__description">
                 Мир никогда не будет прежним после того как увидит ваш сайт!
@@ -113,7 +113,7 @@
               <a class="services__link button" href="#">Заказать</a>
             </li>
             <li class="services__item">
-              <img class="services__image" src="images/jpeg/illustration-2.jpg" alt="">
+              <img class="services__image" src="images/jpeg/illustration-2.jpg" width="300" height="146">
               <h4 class="services__title">Приложения</h4>
               <p class="services__description">
                 Покорите топ-10 приложений в AppStore и Google Play
@@ -121,7 +121,7 @@
               <a class="services__link button" href="#">Заказать</a>
             </li>
             <li class="services__item">
-              <img class="services__image" src="images/jpeg/illustration-3.jpg" alt="">
+              <img class="services__image" src="images/jpeg/illustration-3.jpg" width="300" height="146>
               <h4 class="services__title">Презентации</h4>
               <p class="services__description">
                 Вы даже не подозреваете, насколько вы изумительны!
@@ -155,7 +155,7 @@
             </div>
             <!-- Статистика студии -->
             <div class="studio__stats">
-              <img class="studio__stats-image" src="images/jpeg/nerds-illustration.jpg" alt="">
+              <img class="studio__stats-image" src="images/jpeg/nerds-illustration.jpg" width="360" height="208" alt="Nerds logo">
               <table class="studio__stats-table">
                 <caption class="studio__stats-title">с 2004 года Любим точность во всем:</caption>
                 <tr class="studio__stats-column">
@@ -178,16 +178,16 @@
           <!-- Студии -->
           <div class="studios">
             <a class="studios__link" href="#">
-              <img class="studios__image" src="images/png/html-academy-logo.png" alt="">
+              <img class="studios__image" src="images/png/html-academy-logo.png" width="260" height="180" alt="Html Academy logo">
             </a>
             <a class="studios__link" href="#">
-              <img class="studios__image" src="images/png/borodinski-logo.png" alt="">
+              <img class="studios__image" src="images/png/borodinski-logo.png" width="260" height="180" alt="Borodinski logo">
             </a>
             <a class="studios__link" href="#">
-              <img class="studios__image" src="images/png/pink-logo.png" alt="">
+              <img class="studios__image" src="images/png/pink-logo.png" width="260" height="180" alt="Pink logo">
             </a>
             <a class="studios__link" href="#">
-              <img class="studios__image" src="images/png/mishka-logo.png" alt="">
+              <img class="studios__image" src="images/png/mishka-logo.png" width="260" height="180" alt="Mishka logo">
             </a>
           </div>
         </div>
