--- a/app/catalog.html
+++ b/app/catalog.html
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nerds Catalog</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -167,7 +171,8 @@
                   </div>
                 </li>
                 <li class="product__item">
-                  <img class="product__image" src="images/jpeg/img-barbershop.jpg" width="360" height="576" alt="Barbershop">
+                  <img class="product__image" src="images/jpeg/img-barbershop.jpg" width="360" height="576"
+                    alt="Barbershop">
                   <div class="product__info">
                     <b class="product__title">Barbershop</b>
                     <p class="product__text">Сайт салона красоты. Для мужчин, да.</p>
