Написаны базовые css стили

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nerds</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -56,7 +59,8 @@
           <ul class="advantages__list slider__list">
             <li class="advantages__item slider__item">
               <div class="advantages__content">
-                <img class="advantages__image" src="images/png/index-slide-1.png" width="760" height="431" alt="Смартфоны">
+                <img class="advantages__image" src="images/png/index-slide-1.png" width="760" height="431"
+                  alt="Смартфоны">
                 <h3 class="advantages__title">
                   Долго, дорого, скрупулезно.
                 </h3>
@@ -68,7 +72,8 @@
             </li>
             <li class="advantages__item slider__item">
               <div class="advantages__content">
-                <img class="advantages__image" src="images/png/index-slide-2.png" width="760" height="431" alt="Десктопы">
+                <img class="advantages__image" src="images/png/index-slide-2.png" width="760" height="431"
+                  alt="Десктопы">
                 <h3 class="advantages__title">
                   Любим математику как никто другой
                 </h3>
@@ -80,7 +85,8 @@
             </li>
             <li class="advantages__item slider__item">
               <div class="advantages__content">
-                <img class="advantages__image" src="images/png/index-slide-3.png" width="760" height="431" alt="Планшеты">
+                <img class="advantages__image" src="images/png/index-slide-3.png" width="760" height="431"
+                  alt="Планшеты">
                 <h3 class="advantages__title">
                   Только ночь,
                   только хардкор
@@ -107,7 +113,7 @@
           <ul class="services__list">
             <li class="services__item">
               <img class="services__image" src="images/jpeg/illustration-1.jpg" width="300" height="146>
-              <h4 class="services__title">Веб-сайты</h4>
+              <h4 class=" services__title">Веб-сайты</h4>
               <p class="services__description">
                 Мир никогда не будет прежним после того как увидит ваш сайт!
               </p>
@@ -123,7 +129,7 @@
             </li>
             <li class="services__item">
               <img class="services__image" src="images/jpeg/illustration-3.jpg" width="300" height="146>
-              <h4 class="services__title">Презентации</h4>
+              <h4 class=" services__title">Презентации</h4>
               <p class="services__description">
                 Вы даже не подозреваете, насколько вы изумительны!
               </p>
@@ -156,7 +162,8 @@
             </div>
             <!-- Статистика студии -->
             <div class="studio__stats">
-              <img class="studio__stats-image" src="images/jpeg/nerds-illustration.jpg" width="360" height="208" alt="Nerds logo">
+              <img class="studio__stats-image" src="images/jpeg/nerds-illustration.jpg" width="360" height="208"
+                alt="Nerds logo">
               <table class="studio__stats-table">
                 <caption class="studio__stats-title">с 2004 года Любим точность во всем:</caption>
                 <tr class="studio__stats-column">
@@ -179,10 +186,12 @@
           <!-- Студии -->
           <div class="studios">
             <a class="studios__link" href="#">
-              <img class="studios__image" src="images/png/html-academy-logo.png" width="260" height="180" alt="Html Academy logo">
+              <img class="studios__image" src="images/png/html-academy-logo.png" width="260" height="180"
+                alt="Html Academy logo">
             </a>
             <a class="studios__link" href="#">
-              <img class="studios__image" src="images/png/borodinski-logo.png" width="260" height="180" alt="Borodinski logo">
+              <img class="studios__image" src="images/png/borodinski-logo.png" width="260" height="180"
+                alt="Borodinski logo">
             </a>
             <a class="studios__link" href="#">
               <img class="studios__image" src="images/png/pink-logo.png" width="260" height="180" alt="Pink logo">
@@ -261,7 +270,7 @@
             <textarea class="feedback__text" name="text" id="feedback__text" placeholder="В свободной форме"></textarea>
           </p>
         </div>
-        <button class="feedback__button" type="submit">Отправить</button>
+        <button class="feedback__button button" type="submit">Отправить</button>
       </form>
     </section>
   </div>
