--- a/app/catalog.html
+++ b/app/catalog.html
@@ -8,7 +8,7 @@
   <title>Nerds Catalog</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -209,16 +209,16 @@
                 <div class="paginator">
                   <ul class="paginator__list">
                     <li class="paginator__item">
-                      <a class="paginator__link button" href="#">1</a>
+                      <a class="paginator__link" href="#">1</a>
                     </li>
                     <li class="paginator__item">
-                      <a class="paginator__link button" href="#">2</a>
+                      <a class="paginator__link" href="#">2</a>
                     </li>
                     <li class="paginator__item">
-                      <a class="paginator__link button" href="#">3</a>
+                      <a class="paginator__link" href="#">3</a>
                     </li>
                   </ul>
-                  <a class="paginator__button button" href="#">Следующая</a>
+                  <a class="paginator__button" href="#">Следующая</a>
                 </div>
               </div>
             </div>
@@ -293,7 +293,7 @@
             <textarea class="feedback__text" name="text" id="feedback__text" placeholder="В свободной форме"></textarea>
           </p>
         </div>
-        <button class="feedback__button" type="submit">Отправить</button>
+        <button class="feedback__button button" type="submit">Отправить</button>
       </form>
     </section>
   </div>
