Изменил толщину шрифтов

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <title>Nerds</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -158,9 +158,9 @@
               <!-- Описание услуг -->
               <div class="studio__services">
                 <h4 class="studio__services-title">Выполняем заказы на разработку:</h4>
-                <b class="studio__services-text">Веб-сайтов любой сложности</b>
-                <b class="studio__services-text">Мобильных приложений для iOS и Android</b>
-                <b class="studio__services-text">Слайдшоу и видео для корпоративных презентаций</b>
+                <p class="studio__services-text">Веб-сайтов любой сложности</p>
+                <p class="studio__services-text">Мобильных приложений для iOS и Android</p>
+                <p class="studio__services-text">Слайдшоу и видео для корпоративных презентаций</p>
               </div>
             </div>
             <!-- Статистика студии -->
