--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,8 @@
       <!-- Верхняя панель -->
       <div class="header__top">
         <!-- Логотип -->
-        <a class="logo">
-          <img class="logo__image" src="images/svg/nerds-logo.svg" width="160" height="65" alt="Nerds logo">
+        <a class="logo" href="#">
+          <img class="logo__image" src="images/svg/nerds-logo.svg" alt="Nerds logo">
         </a>
         <!-- Навигация -->
         <nav class="navigation">
@@ -112,117 +112,110 @@
     <div class="container">
       <!-- Услуги -->
       <section class="services">
-        <div class="services__inner">
-          <ul class="services__list">
-            <li class="services__item">
-              <img class="services__image" src="images/jpeg/illustration-1.jpg" width="300" height="146">
-              <h4 class="services__title">Веб-сайты</h4>
-              <p class="services__description">
-                Мир никогда не будет прежним после того как увидит ваш сайт!
-              </p>
-              <a class="services__link button" href="#">Заказать</a>
-            </li>
-            <li class="services__item">
-              <img class="services__image" src="images/jpeg/illustration-2.jpg" width="300" height="146">
-              <h4 class="services__title">Приложения</h4>
-              <p class="services__description">
-                Покорите топ-10 приложений в AppStore и Google Play
-              </p>
-              <a class="services__link button" href="#">Заказать</a>
-            </li>
-            <li class="services__item">
-              <img class="services__image" src="images/jpeg/illustration-3.jpg" width="300" height="146">
-              <h4 class="services__title">Презентации</h4>
-              <p class="services__description">
-                Вы даже не подозреваете, насколько вы изумительны!
-              </p>
-              <a class="services__link button" href="#">Заказать</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="services__list">
+          <li class="services__item">
+            <img class="services__image" src="images/jpeg/illustration-1.jpg" width="300" height="146">
+            <h4 class="services__title">Веб-сайты</h4>
+            <p class="services__description">
+              Мир никогда не будет прежним после того как увидит ваш сайт!
+            </p>
+            <a class="services__link button" href="#">Заказать</a>
+          </li>
+          <li class="services__item">
+            <img class="services__image" src="images/jpeg/illustration-2.jpg" width="300" height="146">
+            <h4 class="services__title">Приложения</h4>
+            <p class="services__description">
+              Покорите топ-10 приложений в AppStore и Google Play
+            </p>
+            <a class="services__link button" href="#">Заказать</a>
+          </li>
+          <li class="services__item">
+            <img class="services__image" src="images/jpeg/illustration-3.jpg" width="300" height="146">
+            <h4 class="services__title">Презентации</h4>
+            <p class="services__description">
+              Вы даже не подозреваете, насколько вы изумительны!
+            </p>
+            <a class="services__link button" href="#">Заказать</a>
+          </li>
+        </ul>
       </section>
       <!-- Студия -->
       <section class="studio">
         <div class="studio__inner">
-          <div class="studio__content">
-            <!-- О нас -->
-            <div class="studio__about-us">
-              <h3 class="studio__title">
-                Мы — маленькая, но гордая
-                дизайн-студия из Краснодара.
-              </h3>
-              <p class="studio__description">
-                Исповедуем принципы минимализма и чистоты. Ставим математический расчет
-                превыше креатива. Работаем не покладая рук, как роботы.
-              </p>
-              <!-- Описание услуг -->
-              <div class="studio__services">
-                <h4 class="studio__services-title">Выполняем заказы на разработку:</h4>
-                <p class="studio__services-text">Веб-сайтов любой сложности</p>
-                <p class="studio__services-text">Мобильных приложений для iOS и Android</p>
-                <p class="studio__services-text">Слайдшоу и видео для корпоративных презентаций</p>
-              </div>
+          <!-- О нас -->
+          <div class="studio__about-us">
+            <h3 class="studio__title">
+              Мы — маленькая, но гордая
+              дизайн-студия из Краснодара.
+            </h3>
+            <p class="studio__description">
+              Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+              превыше креатива. Работаем не покладая рук, как роботы.
+            </p>
+            <!-- Описание услуг -->
+            <div class="studio__services">
+              <h4 class="studio__services-title">Выполняем заказы на разработку:</h4>
+              <p class="studio__services-text">Веб-сайтов любой сложности</p>
+              <p class="studio__services-text">Мобильных приложений для iOS и Android</p>
+              <p class="studio__services-text">Слайдшоу и видео для корпоративных презентаций</p>
             </div>
-            <!-- Статистика студии -->
-            <div class="studio__stats">
-              <img class="studio__stats-image" src="images/jpeg/nerds-illustration.jpg" width="360" height="208"
-                alt="Nerds logo">
-              <table class="studio__stats-table">
-                <caption class="studio__stats-title">с 2004 года Любим точность во всем:</caption>
-                <tr class="studio__stats-column">
-                  <th class="studio__stats-percent">146<sup>%</sup></th>
-                  <th class="studio__stats-text">Уровень самоотдачи</th>
-                </tr>
-                <tr class="studio__stats-column">
-                  <th class="studio__stats-percent">100<sup>%</sup></th>
-                  <th class="studio__stats-text">Соблюдение сроков</th>
-                </tr>
-                <tr class="studio__stats-column">
-                  <th class="studio__stats-percent">50<sup>%</sup></th>
-                  <th class="studio__stats-text">Минимальная предоплата</th>
-                </tr>
-              </table>
-            </div>
-            <!-- Наша статистика -->
-            <div class="studio__stats"></div>
           </div>
-          <!-- Студии -->
-          <div class="studios">
-            <a class="studios__link" href="#">
-              <img class="studios__image" src="images/png/html-academy-logo.png" width="260" height="180"
-                alt="Html Academy logo">
-            </a>
-            <a class="studios__link" href="#">
-              <img class="studios__image" src="images/png/borodinski-logo.png" width="260" height="180"
-                alt="Borodinski logo">
-            </a>
-            <a class="studios__link" href="#">
-              <img class="studios__image" src="images/png/pink-logo.png" width="260" height="180" alt="Pink logo">
-            </a>
-            <a class="studios__link" href="#">
-              <img class="studios__image" src="images/png/mishka-logo.png" width="260" height="180" alt="Mishka logo">
-            </a>
+          <!-- Статистика студии -->
+          <div class="studio__stats">
+            <img class="studio__stats-image" src="images/jpeg/nerds-illustration.jpg" width="360" height="208"
+              alt="Nerds logo">
+            <table class="studio__stats-table">
+              <caption class="studio__stats-title">с 2004 года Любим точность во всем:</caption>
+              <tr class="studio__stats-column">
+                <th class="studio__stats-percent">146<sup>%</sup></th>
+                <th class="studio__stats-text">Уровень самоотдачи</th>
+              </tr>
+              <tr class="studio__stats-column">
+                <th class="studio__stats-percent">100<sup>%</sup></th>
+                <th class="studio__stats-text">Соблюдение сроков</th>
+              </tr>
+              <tr class="studio__stats-column">
+                <th class="studio__stats-percent">50<sup>%</sup></th>
+                <th class="studio__stats-text">Минимальная предоплата</th>
+              </tr>
+            </table>
           </div>
         </div>
       </section>
-    </div>
-    <!-- Контакты -->
-    <section class="contacts">
-      <div class="container">
-        <div class="contacts__inner">
-          <!-- Контактные данные -->
-          <div class="contacts__info">
-            <span class="contacts__name">NЁRDS DESIGN STUDIO</span>
-            <p class="contacts__address">
-              191186, Санкт-Петербург,
-              ул. Б. Конюшенная, д. 19/8
-            </p>
-            <a class="contacts__phone" href="tel:78122757575">тел. +7 (812) 275-75-75</a>
-            <button class="contacts__button button" type="button">Напишите нам</button>
+      <!-- Студии -->
+      <section class="studios">
+        <a class="studios__link" href="#">
+          <img class="studios__image" src="images/png/html-academy-logo.png" width="260" height="180"
+            alt="Html Academy logo">
+        </a>
+        <a class="studios__link" href="#">
+          <img class="studios__image" src="images/png/borodinski-logo.png" width="260" height="180"
+            alt="Borodinski logo">
+        </a>
+        <a class="studios__link" href="#">
+          <img class="studios__image" src="images/png/pink-logo.png" width="260" height="180" alt="Pink logo">
+        </a>
+        <a class="studios__link" href="#">
+          <img class="studios__image" src="images/png/mishka-logo.png" width="260" height="180" alt="Mishka logo">
+        </a>
+      </section>
+      <!-- Контакты -->
+      <section class="contacts">
+        <div class="container">
+          <div class="contacts__inner">
+            <!-- Контактные данные -->
+            <div class="contacts__info">
+              <span class="contacts__name">NЁRDS DESIGN STUDIO</span>
+              <p class="contacts__address">
+                191186, Санкт-Петербург,
+                ул. Б. Конюшенная, д. 19/8
+              </p>
+              <a class="contacts__phone" href="tel:78122757575">тел. +7 (812) 275-75-75</a>
+              <button class="contacts__button button" type="button">Напишите нам</button>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
   </main>
   <!-- Футер -->
   <footer class="footer">
